async-stream/tests/ui/yield_in_async.stderr
error[E0658]: yield syntax is experimental
 --> tests/ui/yield_in_async.rs:6:13
  |
6 |             yield 123;
  |             ^^^^^^^^^
  |
  = note: see issue #43122 <https://github.com/rust-lang/rust/issues/43122> for more information

error[E0727]: `async` generators are not yet supported
 --> tests/ui/yield_in_async.rs:6:13
  |
6 |             yield 123;
  |             ^^^^^^^^^

error[E0271]: type mismatch resolving `<[static generator@$DIR/tests/ui/yield_in_async.rs:5:23: 7:10] as Generator<ResumeTy>>::Yield == ()`
  --> tests/ui/yield_in_async.rs:5:23
   |
5  |           let f = async {
   |  _______________________^
6  | |             yield 123;
7  | |         };
   | |_________^ expected `()`, found integer
   |
note: required by a bound in `from_generator`
  --> $RUST/core/src/future/mod.rs
   |
   |     T: Generator<ResumeTy, Yield = ()>,
   |                            ^^^^^^^^^^ required by this bound in `from_generator`
